# gizwits-coze-socket-demo

./: .gitignore  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig  sdkconfig.old
libs/includes/: sdk_api.h
main/: CMakeLists.txt  app_main.c  config.h  idf_component.yml
main/sdk_callback/: sdk_callback.c
main/storage/: user_storage.c  user_storage.h
spiffs/: convert.py  cut.py
